Add ML inference system with fixture detection
- Added inference_events, ml_models, device_fixture_map tables
- Backend: InferenceService, InferenceController, DTOs for ML events
- Frontend: Device page ML events table with confidence badges
- Frontend: Dashboard fixture usage chart and ML KPI
- Updated Docker setup with proper networking
- Pi integration ready for water fixture classification

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,20 @@ mvnw.cmd
 # Database
 *.db
 *.sqlite
+db_data/
+
+# Docker
+.docker/
 
 # Node (if using any JS tools)
 node_modules/
 .expo/
+
+# Build artifacts
+backend/target/
+*.jar.original
+
+# Sensitive data
+*.pem
+*.key
+!src/**/*.key
