--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,20 +26,21 @@ services:
     container_name: wateriot-app
     environment:
       SPRING_PROFILE: prod
-      DB_HOST: db
-      DB_PORT: 3306
+      DB_HOST: host.docker.internal
+      DB_PORT: 3307
       DB_NAME: water_iot_db
       DB_USER: water_admin
       DB_PASSWORD: WaterSecure2024!
       JWT_SECRET: YourVerySecureSecretKeyThatIsAtLeast256BitsLongForHS256Algorithm2024
-      CORS_ALLOWED_ORIGINS: http://localhost:80,http://localhost:3000
+      CORS_ALLOWED_ORIGINS: http://localhost:80,http://localhost:3000,http://10.33.10.53
+      SERVER_ADDRESS: 0.0.0.0
     ports:
       - "8080:8080"
+    networks:
+      - app-network
     depends_on:
       db:
         condition: service_healthy
-    networks:
-      - app-network
     restart: unless-stopped
 
   web:
